niconama.conf: tuned up for video output

--- a/config/broadcast.d/niconama.conf
+++ b/config/broadcast.d/niconama.conf
@@ -13,7 +13,7 @@ else
 fi
 
 X264OPTS=`cat <<__EOD__
-8x8dct=1:partitions=all:level=3.1:trellis=2:keyint=$((${FPS}*10)):deblock=-1,-1:aq-mode=2:aq-strength=1.00:psy-rd=0.00,0.00:subq=10:me=umh:me_range=16:bframes=3:ref=3:b-adapt=2:qcomp=0.70:qpstep=5:weightp=2:weightb=1:qpmin=10:qpmax=51:rc-lookahead=20:scenecut=30:ipratio=1.40:fast-pskip=1:crf=26:partitions=all:cabac=1:b-bias=0:mixed-refs=1
+8x8dct=1:partitions=all:trellis=2:keyint=$((${FPS}*10)):deblock=-1,-1:aq-mode=2:aq-strength=1.00:psy-rd=0.20,0.00:subme=10:me=umh:me_range=16:bframes=3:ref=3:b-adapt=2:qcomp=0.70:qpstep=5:weightp=2:weightb=1:qpmin=10:qpmax=51:rc-lookahead=20:scenecut=30:ipratio=1.40:fast-pskip=1:cabac=1:b-bias=0:mixed-refs=1
 __EOD__
 `
 
